# DB_Diesel_Actor_Actix_example

./: Cargo.toml  README.md  diesel.toml
migrations/2022-05-16-171428_create_users/: down.sql  up.sql
migrations/2022-05-17-163725_create_posts/: down.sql  up.sql
migrations/2022-05-18-082557_create_cars/: down.sql  up.sql
migrations/2022-05-18-082612_create_sports/: down.sql  up.sql
migrations/2022-05-18-082619_create_user_sports/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema copy.rs  schema.rs
