[package]
name = "actix-diesel-actor-example"
version = "0.0.1"
edition = "2021"

default-run = "main"

[[bin]]
name = "main"
path="src/main.rs"

[[bin]]
name = "migrations"
path="src/bin/migrations.rs"

[dependencies]
actix = "0.13"
dotenv = "0.15"
log = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0-rc.0", features = [ "postgres","r2d2","chrono","serde_json"] }
diesel_migrations = "2.0.0-rc.0"